# shellmate

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PLUGINS.md
examples/claude-code/: .env.example  claude_tool.py  main.py
examples/shell-only/: main.py
shellmate/: __init__.py  auth.py  platform.py
shellmate/core/: __init__.py  exceptions.py  interfaces.py  models.py  registry.py
shellmate/interfaces/cli/: runner.py
shellmate/interfaces/telegram/: bot.py  handlers.py  middleware.py
shellmate/runtime/: __init__.py  approval_gate.py  dispatcher.py  session_manager.py  state_machine.py
shellmate/tools/: __init__.py  git_tool.py  github_tool.py  shell_tool.py
shellmate/workflows/: __init__.py  github_issue_workflow.py
tests/: test_dispatcher.py  test_session_manager.py  test_state_machine.py
