[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellmate"
version = "0.1.0"
description = "AI Task Agent Platform — Telegram-controlled, pluggable tool and workflow system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["telegram", "bot", "ai", "agent", "automation", "claude"]
dependencies = [
    "python-telegram-bot[webhooks]>=21.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["shellmate"]
